--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,minimum-scale=1,user-scalable=no">
-    <title>yixiantong</title>
+    <title>美团网-北京美食_酒店_旅游_团购_电影_吃喝玩乐</title>
   </head>
   <body>
     <div id="app"></div>
